rust/tests/snapshots/output/account__config_list.snap
---
source: tests/cli/snapshots.rs
---
$ vendo config list
exit: 0
--- stdout ---
Tip: prefer `vendo profile list` for saved profile management.

* alpha  acct-alpha  [stub]
  beta  acct-beta  [stub]
