rust/tests/snapshots/output/account__config_reset.snap
---
source: tests/cli/snapshots.rs
---
$ vendo config reset --yes
exit: 0
--- stdout ---
Done: Configuration deleted.
