rust/tests/snapshots/output/account__config_set.snap
---
source: tests/cli/snapshots.rs
---
$ vendo config set --account acct-alpha
exit: 0
--- stdout ---
Configuration saved [home]/.config/vendo/config.json
