rust/tests/snapshots/output/account__config_show.snap
---
source: tests/cli/snapshots.rs
---
$ vendo config show
exit: 0
--- stdout ---
Vendo CLI Config Inspect

  Use `vendo profile current` for the day-to-day effective account view.

Effective Values

  API Key:        vend...0000 (profile)
  Base URL:       [stub] (profile)
  Account ID:     acct-alpha (profile)
  Active Profile: alpha
  Config Path:    [home]/.config/vendo/config.json

Saved Profiles

  * alpha (active)  acct-alpha  [stub]
    beta  acct-beta  [stub]
