rust/tests/snapshots/output/account__login_after_reset.snap
---
source: tests/cli/snapshots.rs
---
$ vendo login --api-key vendo_sk_fake_gamma_0000 --account acct-gamma --base-url [stub]
exit: 0
--- stdout ---

Setup summary
  Profile:     demo-account
  Base URL:    [stub]
  Account ID:  acct-gamma
  Auth:        verified as Demo Account (synthetic)

Next steps
  vendo workspace
  vendo status
Done: Vendo CLI setup complete.
