rust/tests/snapshots/output/account__login_browser.snap
---
source: tests/cli/snapshots.rs
---
$ vendo login --base-url [stub]
exit: 0
--- stdout ---
No API key found. Starting browser login...
Login at:
[stub]/cli-auth?port=[port]&state=[state]
Press ENTER to open in the browser...
Waiting for authorization...

Setup summary
  Profile:     demo-account
  Base URL:    [stub]
  Account ID:  acct-alpha
  Auth:        verified as Demo Account (synthetic)

Next steps
  vendo doctor
  vendo whoami
  vendo status
Done: Vendo CLI setup complete.
