rust/tests/snapshots/output/account__login_existing_key.snap
---
source: tests/cli/snapshots.rs
---
$ vendo login
exit: 0
--- stdout ---
Using existing profile alpha. Run `vendo login --force` to sign in again.

Setup summary
  Profile:     alpha
  Base URL:    [stub]
  Account ID:  acct-alpha
  Auth:        verified as Demo Account (synthetic)

Next steps
  vendo doctor
  vendo whoami
  vendo status
Done: Vendo CLI setup complete.
